# Midterm_ros_22027546

./: README.md
ten/: CMakeLists.txt  package.xml  save (copy).rviz
ten/config/: joint_names_ten.yaml
ten/launch/: display.launch  gazebo.launch
ten/meshes/: base_link.STL  link_armone.STL  link_armtwo.STL  link_grip.STL  link_lb.STL  link_lf.STL  link_rb.STL  link_rf.STL  link_rl.STL  link_rr.STL
ten/urdf/: ten.csv  ten.urdf
zero_control/: CMakeLists.txt  package.xml
zero_control/scripts/: arm_control.py
